corpus/positive/combined.txt
==========================
Full RPG scene
==========================

hero "Warrior" { hp: 100, attack: 2d6 + 3 }
enemy "Skeleton" { hp: 30, attack: 1d6 }
encounter "Crypt" {
  spawn "Skeleton" with { hp: 30, attack: 1d6 }
  strike skeleton with 2d6 + 3
}

---

(source_file
  (hero_declaration
    (string)
    (stat_block
      (stat_entry
        (identifier)
        (num))
      (stat_entry
        (identifier)
        (binary_expression
          (dice)
          (num)))))
  (enemy_declaration
    (string)
    (stat_block
      (stat_entry
        (identifier)
        (num))
      (stat_entry
        (identifier)
        (dice))))
  (encounter_block
    (string)
    (spawn_statement
      (string)
      (stat_block
        (stat_entry
          (identifier)
          (num))
        (stat_entry
          (identifier)
          (dice))))
    (strike_statement
      (identifier)
      (binary_expression
        (dice)
        (num)))))
==========================
Dialogue leading to skill check
==========================

say "The door is locked" {
  "Pick the lock" => check dexterity vs 15 {
    success => print("Lock picked!"),
    failure => print("Lock holds"),
  },
  "Force it open" => check strength vs 18 {
    success => print("Door smashed!"),
    failure => print("It wont budge"),
  },
}

---

(source_file
  (dialogue
    (string)
    (dialogue_choice
      (string)
      (skill_check
        (identifier)
        (num)
        (check_success
          (function_call
            (identifier)
            (argument_list
              (string))))
        (check_failure
          (function_call
            (identifier)
            (argument_list
              (string))))))
    (dialogue_choice
      (string)
      (skill_check
        (identifier)
        (num)
        (check_success
          (function_call
            (identifier)
            (argument_list
              (string))))
        (check_failure
          (function_call
            (identifier)
            (argument_list
              (string))))))))
==========================
Inventory in combat loop
==========================

while enemy_hp > 0 {
  if player has "magic sword" {
    strike enemy with 3d6
  } else {
    strike enemy with 1d6
  }
}

---

(source_file
  (while_statement
    (binary_expression
      (identifier)
      (num))
    (block
      (if_statement
        (has_expression
          (identifier)
          (string))
        (block
          (strike_statement
            (identifier)
            (dice)))
        (block
          (strike_statement
            (identifier)
            (dice)))))))
==========================
Quest with dialogue and checks
==========================

quest "The Cursed Temple" {
  phase "Entrance" {
    say "A voice echoes" {
      "Enter" => print("You step inside"),
      "Leave" => print("You flee"),
    }
  }
  phase "Trial" {
    check wisdom vs 2d6 + 8 {
      success => {
        print("Blessed!")
      },
      failure => {
        print("Cursed!")
      },
    }
  }
}

---

(source_file
  (quest_declaration
    (string)
    (phase
      (string)
      (dialogue
        (string)
        (dialogue_choice
          (string)
          (function_call
            (identifier)
            (argument_list
              (string))))
        (dialogue_choice
          (string)
          (function_call
            (identifier)
            (argument_list
              (string))))))
    (phase
      (string)
      (skill_check
        (identifier)
        (binary_expression
          (dice)
          (num))
        (check_success
          (block
            (function_call
              (identifier)
              (argument_list
                (string)))))
        (check_failure
          (block
            (function_call
              (identifier)
              (argument_list
                (string)))))))))
==========================
Nested control with dice
==========================

for round in 1..5 {
  var roll = 1d20
  if roll > 15 {
    print("Critical hit!")
  } else if roll > 10 {
    print("Hit")
  } else {
    print("Miss")
  }
}

---

(source_file
  (for_in_statement
    (identifier)
    (binary_expression
      (num)
      (num))
    (block
      (assignment
        (identifier)
        (dice))
      (if_statement
        (binary_expression
          (identifier)
          (num))
        (block
          (function_call
            (identifier)
            (argument_list
              (string))))
        (if_statement
          (binary_expression
            (identifier)
            (num))
          (block
            (function_call
              (identifier)
              (argument_list
                (string))))
          (block
            (function_call
              (identifier)
              (argument_list
                (string)))))))))
